--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
         <div class="col-12 mb-3">
           <p>Do you want to decorate your profile for Reine's upcoming birthday?</p>
           <p>Are you in a hurry or don't know how to?</p>
-          <p>Fear no more! Just copy the image url down here or upload your profile picture and get your customized icon! It's just three simple clicks!</p>
+          <p>Fear no more! You can use this app to get your customized icon in a flash, it's just three simple clicks!</p>
           <button class="btn btn-primary" (click)="continue()">Continue</button>
         </div>
       </div>
